Add custom maven repository list Add unstable version patterns for exclude from the latest version